# wago

./: .actrc  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  HANDOFF.md  Makefile  OPTIMIZATIONS.md  README.md  ROADMAP.md  SPECTEST.md  THIRD_PARTY_NOTICES.md  agent-todo.md  constexpr.go  global_test.go  globals.go  go.mod  install.sh  instantiate.go  schema.json  spectest_exec_test.go  status.md  wago  wago.go  wago.schema.json  wago.sh  wago_facade_test.go  wago_test.go
bench/corpus/rust-wasi/: Cargo.toml  build.sh
firmware/pico2/: CMakeLists.txt  README.md  main.go  native.go  native_arm.S  native_riscv.S  target_arm.go  target_hazard3.go  wago_pico2.c  wago_pico2.h  wago_pico2_pico_sdk.c  wago_pico2_test.c
firmware/pico2/helpers/: main.go
firmware/pico2/tinygo/: tinygo-v0.41.1-rp2350-riscv.patch
warp/: .bazelrc  .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  RELEASENOTES.md  THIRD_PARTY_LICENSES.md  WORKSPACE  autosarcpp14-wasm.config  cspell.json  requirements.txt
warp/.github/: CODEOWNERS
warp/.github/scripts/: install_wasm_tools.sh  run_qemu_fuzz.cjs
warp/.github/workflows/: bench.yml  docs.yml  fuzz.yml  fuzz_pr.yml  github-sync-branches.yml  github-sync-tags.yml  internal.yml  main.yml  oss.yml  public_github.yml  release.yml  tag.yml
warp/bazel/toolchains/: BUILD  tasking_config.bzl  toolchain_config.bzl
warp/bench/: CMakeLists.txt  main.cpp
warp/binding/: binding_all.py
warp/binding/python/: CMakeLists.txt  binding.cpp  binding.hpp  binding_compiler.cpp  binding_runtime.cpp
warp/cmake/: AddCompilerOptions.cmake  AddGtest.cmake  AddInstallTarget.cmake  AddLinkDependencies.cmake  AutoSelectBackendTarget.cmake  EnableStaticCheck.cmake  QNXArm64Toolchain.cmake  QNXx86_64Toolchain.cmake  TaskingTricore.cmake  installConfig.cmake
warp/cmm/: acquire_cbs_access.cmm  demo_flash.cmm  flash_elf_file.cmm  fuzz_flash.cmm  meminit.cmm  spectest_flash.cmm
warp/cspell/: CodeSpellCheck.md  project-words.txt
warp/demo/: BUILD  CMakeLists.txt  Readme.md  vb_demo.cpp
warp/disassembler/: CMakeLists.txt  color.cpp  color.hpp  disassembler.cpp  disassembler.hpp
warp/docs/: GettingStarted.md  HowToReportBugs.md  InfoForContributors.md
warp/docs/implementation_details/: BinaryLayout.md  CondenseComparison.md  DebugLayout.md  ImportFunction.md  JobMemoryLayout.md  LoopExample.html  Multi-value.md  RelPatchObj.md
warp/docs/setup/: Build.md  CreateSPDX.md  StaticCheck.md  Test.md
warp/docs/use_guide/: ImportFunction.md  ImportGlobal.md
warp/extensions/: Analytics.cpp  Analytics.hpp  BUILD  CMakeLists.txt  DwarfDebugInfo.hpp  DwarfDebugLine.hpp  DwarfImpl.cpp  DwarfImpl.hpp  Extensions.cpp  MemoryDumpAPI.cpp  MemoryDumpAPI.hpp  README.md  Runner.cpp  Runner.hpp  TraceBuffer.hpp  Tracing.cpp  Tracing.hpp
warp/fuzz/: CMakeLists.txt
warp/fuzz/afl_harness/: CMakeLists.txt  Readme.md  afl_launch.sh
warp/fuzz/corpus/: CMakeLists.txt  gen.cpp
warp/fuzz/fuzz_with_debugger/: .gitignore  CMakeLists.txt  Dockerfile  README.md  dbg_fuzz.hpp  dbg_fuzz.py  fuzz_init.gdb  fuzz_module_manager.py  fuzz_with_debugger.cpp  gdb_fuzz.py  gdb_fuzz_docker_multilaunch.sh  lauterbach_fuzz.py
warp/fuzz/reference/: CMakeLists.txt  main.cpp
warp/linker/: BUILD  GNUTricore.ld
warp/linker/tasking/: BUILD  tc49x.ld
warp/scripts/: archive.sh  check_dependencies.py  cmpFunctionSize.py  code_gen_test.py  debug_info_gen_test.py  explorer.html  explorer_server.py  list_tasking_data_section.py  run_analysis.py  run_fuzz.py  test.py  tricore_qemu_execute.py  warp_dump.py  wasm_dwarf_lib.wasm  wasm_executor.py
warp/scripts/android/: android_test.py
warp/scripts/benchmark/: Readme.md  run_bench.py
warp/scripts/helper/: __init__.py  dis.py  dwarf.py  file_check.py  leb128.py  lib_dwarf.py  wasm_parser.py  wasm_utils.py  wat_parser.py
warp/scripts/qnx_sh/: machine_specific_config.json  machine_specific_config.py  machine_specific_config.sh  manage_tap_network.sh  run_qemu.sh  ssh_to_qemu.py
warp/scripts/spdx/: BerkeleySoftFloatSPDX.py  SPDXCreatorBase.py  WasmCompilerSPDX.py  generate_spdx.py
warp/src/: Android.bp  BUILD  CMakeLists.txt  config.bzl  config.hpp
warp/src/WasmModule/: CMakeLists.txt  WasmModule.cpp  WasmModule.hpp
warp/src/core/: .clang-tidy  CMakeLists.txt
warp/src/extensions/: Extension.hpp  IAnalytics.hpp  IDwarf.hpp
warp/src/utils/: CMakeLists.txt  ExecutableMemory.cpp  ExecutableMemory.hpp  ExecutableMemoryNoMMU.hpp  LinearMemoryAllocator.cpp  LinearMemoryAllocator.hpp  MemUtils.cpp  MemUtils.hpp  OSAPIChecker.cpp  OSAPIChecker.hpp  RAIISignalHandler.cpp  RAIISignalHandler.hpp  STDCompilerLogger.hpp  SignalFunctionWrapper.cpp  SignalFunctionWrapper.hpp  SignalFunctionWrapper_unix.cpp  SignalFunctionWrapper_unix.hpp  SignalFunctionWrapper_win.cpp  SignalFunctionWrapper_win.hpp  StackTop.hpp  VirtualMemoryAllocator.cpp  VirtualMemoryAllocator.hpp  windows_clean.hpp  wintt_undef.hpp
warp/tests/: .gitignore  CMakeLists.txt  SingleCaseTest.cpp  SingleCaseTest.hpp  TestData.hpp  base64.cpp  base64.hpp  lauterbach_spectest.py  spectest.py  testimports.cpp  testimports.hpp
warp/tests/codegen/: README.md  aarch64_imm.wat  aarch64_linear_memcpy.wat  br_if_function.wat  (+46 more)
warp/wasm_examples/: 32good5.wasm  8ubad.wasm  argswitch.wasm  arith.wasm  as-binary-operand.wasm  as-br_table-first.wasm  as-call_indirect-first.wasm  as-compare-right.wasm  as-convert-operand.wasm  as-func-mid.wasm  as-load-operand.wasm  as-loop-mid.wasm  as-memory.grow-value.wasm  as-test-operand.wasm  asmem.wasm  asmemgrow.wasm  asmemgrowvalue.wasm  block_unwind_by_br_value.wasm  builtintest.wasm  complexexport.wasm  complexmodule.wasm  constreinterp.wasm  convert.wasm  convert2.wasm  convert_nogrow.wasm  demo_eval.wasm  demo_evalprint.wasm  demo_mutglob.wasm  dispatch.wasm  div0.wasm  f64_eq.wasm  fac.wasm  fibn.wasm  floyd-warshall.wasm  globexport.wasm  globtest.wasm  highstack.wasm  i32load16s.wasm  i32load8s.wasm  i64.neg_smax.wasm  (+28 more)
(+1789 files in other folders)
