[package]
name = "wago-wasi-apps"
version = "0.0.0"
edition = "2021"
publish = false

# Real third-party Rust libraries, compiled to wasm32-wasip1 and run end-to-end on
# wago via its built-in WASI (wago run --wasi). Each binary is a self-contained
# workload with deterministic output, so the suite can verify wago executed it
# correctly (see src/wago wasi_apps_test.go) — unlike the emscripten/Go real-large
# tier, these actually run.
[dependencies]
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
